--- a/tourpedia/src/views/Home/styles.css
+++ b/tourpedia/src/views/Home/styles.css
@@ -19,15 +19,17 @@
     top: 18%;
     left: 40%;
     right: 40%;
+    text-align: center;
 }
 
 .home-header-description {
     font-size: 20px;
     color: rgb(0, 0, 0);
     position: absolute;
-    top: 28%;
+    top: 30%;
     left: 25%;
     right: 25%;
+    text-align: center;
 }
 
 .home-header-search-options {
@@ -73,6 +75,7 @@
     font-size: 25px;
     font-weight: bold;
     margin-bottom: 15px;
+    margin-top: 20px;
 }
 
 .all-small-card-height {
@@ -86,6 +89,13 @@
     }
 }
 
+@media (min-width: 1000px) {
+    .home-header-search-button {
+        width: 160px;
+        font-size: 20px;
+    }
+}
+
 @media (max-width: 768px) {
     .home-header-search-options {
         flex-direction: column;
@@ -95,7 +105,7 @@
         width: 210px;
     }
     
-    .home-section-title {
+    .home-header-section-bottom {
         margin-top: 100px;
     }
 }
@@ -110,10 +120,6 @@
 @media (max-width: 780px) {
     .home-header-plan-button {
         width: 210px;
-    }
-    
-    .home-section-title {
-        margin-top: 100px;
     }
 }
 
